--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
               class="text-[#1a1a1a] text-xl p-4 rounded h-14 outline-0 outline-transparent border-0 border-b-2 w-full bg-transparent"
               placeholder="Enter your email"
               type="text"
-              name="user-email"
+              name="email"
               autocomplete="off"
-              id="email"
+              id="user-email"
             />
 
             <input
