--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
       </section>
       <!-- Input area -->
       <section class="flex flex-col lg:flex-row mx-auto">
-        <!-- deposit -->
+        <!-- deposit area-->
         <div
           class="backdrop-blur-xl bg-white/30 text-[#1a1a1a] min-h-12 p-8 lg:w-2/5 md:w-3/5 mx-auto w-full lg:mt-20 md:mt-10 mt-10 flex rounded flex-col gap-4">
           <h2 class="text-3xl mt-6 capitalize text-center md:text-left">
@@ -75,7 +75,7 @@
             Deposit
           </button>
         </div>
-        <!-- withdraw -->
+        <!-- withdraw area-->
         <div
           class="backdrop-blur-xl bg-white/30 text-[#1a1a1a] min-h-12 p-8 lg:w-2/5 md:w-3/5 mx-auto w-full lg:mt-20 md:mt-10 mt-10 flex rounded flex-col gap-4"
         >
